syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.rotomer.simplevm.messages";

import "google/protobuf/any.proto";

package rotomer.simplevm.messages;

message VmCommandEnvelope {
    google.protobuf.Any inner_message = 1;
    string vm_id = 3;
}